test/fail/poly_rec03.v3
//@execute 0=0
class poly_rec<T> {
	var f: poly_rec<poly_rec<T>>;
	new() {
		if (false) f = poly_rec<poly_rec<T>>.new();
		var i = f;
	}
}
def main(arg: int) -> int {
	var o = poly_rec<int>.new().f;
	return 0;
}
